--- a/spetspredlozheniya.html
+++ b/spetspredlozheniya.html
@@ -36,11 +36,7 @@
         </ul>
         <div class="toggle-menu">
           <div class="toggle-menu__inner"></div>
-        </div>
-        <div class="login">
-          <a href="./personal.html" class="login__link">Войти</a>
-          <a href="./registration.html" class="login__link">Зарегистрироваться</a>
-        </div>                
+        </div>       
       </div>
     </nav>
     <header class="header">
@@ -53,13 +49,6 @@
           <div class="header__content">
             <div class="header__content-row">
               <div class="header__content-col header__wrap">
-                <div class="city__wrap">                  
-                  <select name="city" id="city">
-                    <option value="Москва" selected>Москва</option>
-                  </select>
-                </div>            
-              </div>
-              <div class="header__content-col header__wrap">
                 <form class="search" action="#">
                   <div class="search__inner">
                     <input class="search__input" type="text" placeholder="Поиск">
@@ -67,7 +56,7 @@
                       <i class="fa fa-search"></i>
                     </button>
                   </div>
-               </form>
+                </form>
               </div>
               <div class="header__content-col">
                 <div class="phones">
@@ -79,10 +68,10 @@
                 </div>
               </div>
               <div class="header__content-col">
-                <div class="compare">
-                  <a href="#" class="compare__link">
-                    <span class="header__icon"><i class="fa fa-balance-scale"></i></span>
-                    <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>                  
+                <div class="calendar">
+                  <a href="#" class="calendar">
+                    <span class="header__icon"><i class="fa fa-calendar-check-o"></i></span>
+                    <span class="calendar__text">ПН-ПТ 09:00-18:00</span>
                   </a>
                 </div>
               </div>
@@ -91,24 +80,24 @@
                   <a href="#" class="cart__link">
                     <div class="cart__img">
                       <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
-                    </div>                
+                    </div>
                     <div class="cart__text">
                       <span class="cart__count-text">Товаров</span>
                       <span class="cart__count-num">0</span>
-                      <br>                         
+                      <br>
                       <span class="cart__sum-text">На сумму</span>
                       <span class="cart__sum-num">0 руб</span>
-                    </div>                
+                    </div>
                   </a>
                 </div>
               </div>
             </div>
             <div class="header__content-row">
               <ul class="goods">
-                <li class="goods__item">                
+                <li class="goods__item">
                   <a href="./catalog.html" class="goods__link">
-                      <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
-                      <span class="goods__text">Кофе</span>
+                    <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Кофе</span>
                   </a>
                   <div class="goods__drop">
                     <ul class="goods__drop-list">
@@ -139,8 +128,8 @@
                     </ul>
                   </div>
                 </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
                     <img src="./img/header/tea-icon.png" alt="" class="goods__img">
                     <span class="goods__text">Чай</span>
                   </a>
@@ -183,36 +172,36 @@
                   </div>
                 </li>
                 <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">                  
+                  <a href="#" class="goods__link">
                     <img src="./img/header/dishes.png" alt="" class="goods__img">
                     <span class="goods__text">Посуда</span>
                   </a>
                 </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
                     <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
                     <span class="goods__text">Сладости</span>
                   </a>
                 </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
                     <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
                     <span class="goods__text">Сахар</span>
                   </a>
                 </li>
-                <li class="goods__item">                
-                  <a href="./catalog.html" class="goods__link">
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
                     <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
                     <span class="goods__text">Кофемашины</span>
                   </a>
                 </li>
                 <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">
-                    <span class="goods__text">Кофе в  шоколаде</span>
+                  <a href="#" class="goods__link">
+                    <span class="goods__text">Кофе в шоколаде</span>
                   </a>
                 </li>
                 <li class="goods__item">
-                  <a href="./catalog.html" class="goods__link">
+                  <a href="#" class="goods__link">
                     <span class="goods__text">Прочее</span>
                   </a>
                 </li>
@@ -222,132 +211,133 @@
         </div>
     </header>
     <div class="scrolled">
-      <div class="container scrolled__container">
-          <button class="catalog">Каталог</button>        
-        <div class="logo scrolled__logo">
-          <a href="./index.html" class="logo__link">
-            <img src="./img/scrolled/logo-gold-mini.png" alt="Компания Bonka" class="logo__pic">
-          </a>
+        <div class="container scrolled__container">
+          <button class="catalog">Каталог</button>
+          <div class="logo scrolled__logo">
+            <a href="./index.html" class="logo__link">
+              <img src="./img/scrolled/logo-gold-mini.png" alt="Компания Bonka" class="logo__pic">
+            </a>
+          </div>
+          <ul class="goods scrolled__goods">
+            <li class="goods__item">
+              <a href="" class="goods__link">Кофе</a>
+              <div class="goods__drop">
+                <ul class="goods__drop-list">
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Десертные</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Кофе в капсулах</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Купажи</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Плантационные</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Плантационный кофе</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Элитные</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Чай</a>
+              <div class="goods__drop">
+                <ul class="goods__drop-list">
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Белый чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Жасминовый чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Классический зеленый чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Классический черный чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Композиционный чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Пу Эр</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Связанный чай</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Улун</a>
+                  </li>
+                  <li class="goods__drop-item">
+                    <a href="#" class="goods__drop-link">Чайные напитки</a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Посуда</a>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Сладости</a>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Сахар</a>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Кофемашины</a>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Кофе в шоколаде</a>
+            </li>
+            <li class="goods__item">
+              <a href="" class="goods__link">Прочее</a>
+            </li>
+          </ul>
+          <ul class="scrolled__list">
+            <li class="scrolled__item">
+              <a href="#" class="scrolled__link">
+                <i class="fa fa-phone-square"></i>
+              </a>
+            </li>
+            <li class="scrolled__item scrolled__search">
+              <a href="#" class="scrolled__link">
+                <i class="fa fa-search"></i>
+              </a>
+              <div class="scrolled__search-drop">
+                <form action="#" class="scrolled__search-form">
+                  <div class="search__inner">
+                    <input class="search__input" type="text" placeholder="Поиск">
+                    <button class="search__btn">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </li>
+            <li class="scrolled__item">
+              <a href="#" class="scrolled__link">
+                <i class="fa fa-shopping-bag"></i>
+              </a>
+            </li>
+          </ul>
         </div>
-        <ul class="goods scrolled__goods">
-          <li class="goods__item">
-            <a href="./catalog.html" class="goods__link">Кофе</a>
-            <div class="goods__drop">
-              <ul class="goods__drop-list">
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Десертные</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Кофе в капсулах</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Купажи</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Плантационные</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Плантационный кофе</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Элитные</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Чай</a>
-            <div class="goods__drop">
-              <ul class="goods__drop-list">
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Белый чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Жасминовый чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Классический зеленый чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Классический черный чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Композиционный чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Пу Эр</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Связанный чай</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Улун</a>
-                </li>
-                <li class="goods__drop-item">
-                  <a href="#" class="goods__drop-link">Чайные напитки</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Посуда</a>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Сладости</a>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Сахар</a>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Кофемашины</a>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Кофе в шоколаде</a>
-          </li>
-          <li class="goods__item">
-            <a href="" class="goods__link">Прочее</a>
-          </li>
-        </ul>
-        <ul class="scrolled__list">
-          <li class="scrolled__item">
-            <a href="#" class="scrolled__link">
-              <i class="fa fa-phone-square"></i>
-            </a>
-          </li>
-          <li class="scrolled__item">
-            <a href="#" class="scrolled__link">
-              <i class="fa fa-search"></i>
-            </a>
-          </li>
-          <li class="scrolled__item">
-            <a href="#" class="scrolled__link">
-              <i class="fa fa-balance-scale"></i>
-            </a>
-          </li>
-          <li class="scrolled__item">
-            <a href="#" class="scrolled__link">
-              <i class="fa fa-shopping-bag"></i>
-            </a>
-          </li>
-        </ul>
-        <div class="login login--scrolled">
-          <a href="#" class="login__link">Войти</a>
-          <a href="#" class="login__link">Зарегистрироваться</a>
-        </div>       
       </div>
-    </div>
     <div class="container">
       <div class="content">
           <div class="breadcrumbs">
