--- a/o-nas.html
+++ b/o-nas.html
@@ -15,7 +15,7 @@
 
 <body>
   <div class="wrapper">
-    <nav class="menu">
+   <nav class="menu">
       <div class="container">
         <ul class="menu__list">
           <li class="menu__item menu__item--active">
@@ -37,189 +37,178 @@
         <div class="toggle-menu">
           <div class="toggle-menu__inner"></div>
         </div>
-        <div class="login">
-          <a href="./personal.html" class="login__link">Войти</a>
-          <a href="./registration.html" class="login__link">Зарегистрироваться</a>
-        </div>
       </div>
     </nav>
     <header class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="./index.html" class="logo__link">
-            <img src="./img/header/logo.png" alt="Компания Bonka" class="logo__pic">
-          </a>
-        </div>
-        <div class="header__content">
-          <div class="header__content-row">
-            <div class="header__content-col header__wrap">
-              <div class="city__wrap">
-                <select name="city" id="city">
-                  <option value="Москва" selected>Москва</option>
-                </select>
+        <div class="container">
+          <div class="logo">
+            <a href="./index.html" class="logo__link">
+              <img src="./img/header/logo.png" alt="Компания Bonka" class="logo__pic">
+            </a>
+          </div>
+          <div class="header__content">
+            <div class="header__content-row">
+              <div class="header__content-col header__wrap">
+                <form class="search" action="#">
+                  <div class="search__inner">
+                    <input class="search__input" type="text" placeholder="Поиск">
+                    <button class="search__btn">
+                      <i class="fa fa-search"></i>
+                    </button>
+                  </div>
+                </form>
               </div>
-            </div>
-            <div class="header__content-col header__wrap">
-              <form class="search" action="#">
-                <div class="search__inner">
-                  <input class="search__input" type="text" placeholder="Поиск">
-                  <button class="search__btn">
-                    <i class="fa fa-search"></i>
-                  </button>
+              <div class="header__content-col">
+                <div class="phones">
+                  <span class="header__icon"><i class="fa fa-phone-square"></i></span>
+                  <span class="phones__wrap">
+                    <a class="phones__link" href="tel:#">+7(495) 510-52-18</a>
+                    <a class="phones__link" href="tel:#">+7(925) 031-13-37</a>
+                  </span>
                 </div>
-              </form>
-            </div>
-            <div class="header__content-col">
-              <div class="phones">
-                <span class="header__icon"><i class="fa fa-phone-square"></i></span>
-                <span class="phones__wrap">
-                  <a class="phones__link" href="tel:#">+7(495) 510-52-18</a>
-                  <a class="phones__link" href="tel:#">+7(925) 031-13-37</a>
-                </span>
+              </div>
+              <div class="header__content-col">
+                <div class="calendar">
+                  <a href="#" class="calendar">
+                    <span class="header__icon"><i class="fa fa-calendar-check-o"></i></span>
+                    <span class="calendar__text">ПН-ПТ 09:00-18:00</span>
+                  </a>
+                </div>
+              </div>
+              <div class="header__content-col">
+                <div class="cart">
+                  <a href="#" class="cart__link">
+                    <div class="cart__img">
+                      <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
+                    </div>
+                    <div class="cart__text">
+                      <span class="cart__count-text">Товаров</span>
+                      <span class="cart__count-num">0</span>
+                      <br>
+                      <span class="cart__sum-text">На сумму</span>
+                      <span class="cart__sum-num">0 руб</span>
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
-            <div class="header__content-col">
-              <div class="compare">
-                <a href="#" class="compare__link">
-                  <span class="header__icon"><i class="fa fa-balance-scale"></i></span>
-                  <span class="compare__text">В сравнении&nbsp;<span class="compare__count">0</span></span>
-                </a>
-              </div>
-            </div>
-            <div class="header__content-col">
-              <div class="cart">
-                <a href="#" class="cart__link">
-                  <div class="cart__img">
-                    <span class="header__icon"><i class="fa fa-shopping-bag"></i></span>
+            <div class="header__content-row">
+              <ul class="goods">
+                <li class="goods__item">
+                  <a href="./catalog.html" class="goods__link">
+                    <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Кофе</span>
+                  </a>
+                  <div class="goods__drop">
+                    <ul class="goods__drop-list">
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Десертные</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Кофе в капсулах</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Купажи</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Плантационные</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Плантационный кофе</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Элитные</a>
+                      </li>
+                    </ul>
                   </div>
-                  <div class="cart__text">
-                    <span class="cart__count-text">Товаров</span>
-                    <span class="cart__count-num">0</span>
-                    <br>
-                    <span class="cart__sum-text">На сумму</span>
-                    <span class="cart__sum-num">0 руб</span>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <img src="./img/header/tea-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Чай</span>
+                  </a>
+                  <div class="goods__drop">
+                    <ul class="goods__drop-list">
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Белый чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Жасминовый чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Классический зеленый чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Классический черный чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Композиционный чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Пу Эр</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Связанный чай</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Улун</a>
+                      </li>
+                      <li class="goods__drop-item">
+                        <a href="#" class="goods__drop-link">Чайные напитки</a>
+                      </li>
+                    </ul>
                   </div>
-                </a>
-              </div>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <img src="./img/header/dishes.png" alt="" class="goods__img">
+                    <span class="goods__text">Посуда</span>
+                  </a>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Сладости</span>
+                  </a>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Сахар</span>
+                  </a>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
+                    <span class="goods__text">Кофемашины</span>
+                  </a>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <span class="goods__text">Кофе в шоколаде</span>
+                  </a>
+                </li>
+                <li class="goods__item">
+                  <a href="#" class="goods__link">
+                    <span class="goods__text">Прочее</span>
+                  </a>
+                </li>
+              </ul>
             </div>
           </div>
-          <div class="header__content-row">
-            <ul class="goods">
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/coffee-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Кофе</span>
-                </a>
-                <div class="goods__drop">
-                  <ul class="goods__drop-list">
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Десертные</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Зерновой кофе в пакетах дой пак с застежкой зип лок</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Кофе в капсулах</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Купажи</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Молотый кофе в подарочной упаковке</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Плантационные</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Плантационный кофе</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Элитные</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/tea-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Чай</span>
-                </a>
-                <div class="goods__drop">
-                  <ul class="goods__drop-list">
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Ароматизированный зеленый чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Ароматизированный черный чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Белый чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Жасминовый чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Классический зеленый чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Классический черный чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Композиционный чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Пу Эр</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Связанный чай</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Улун</a>
-                    </li>
-                    <li class="goods__drop-item">
-                      <a href="#" class="goods__drop-link">Чайные напитки</a>
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/dishes.png" alt="" class="goods__img">
-                  <span class="goods__text">Посуда</span>
-                </a>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/sweet-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Сладости</span>
-                </a>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/sugar-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Сахар</span>
-                </a>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <img src="./img/header/coffeemachine-icon.png" alt="" class="goods__img">
-                  <span class="goods__text">Кофемашины</span>
-                </a>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <span class="goods__text">Кофе в шоколаде</span>
-                </a>
-              </li>
-              <li class="goods__item">
-                <a href="./catalog.html" class="goods__link">
-                  <span class="goods__text">Прочее</span>
-                </a>
-              </li>
-            </ul>
-          </div>
         </div>
-      </div>
     </header>
     <div class="scrolled">
       <div class="container scrolled__container">
@@ -231,7 +220,7 @@
         </div>
         <ul class="goods scrolled__goods">
           <li class="goods__item">
-            <a href="./catalog.html" class="goods__link">Кофе</a>
+            <a href="" class="goods__link">Кофе</a>
             <div class="goods__drop">
               <ul class="goods__drop-list">
                 <li class="goods__drop-item">
@@ -326,15 +315,20 @@
               <i class="fa fa-phone-square"></i>
             </a>
           </li>
-          <li class="scrolled__item">
+          <li class="scrolled__item scrolled__search">
             <a href="#" class="scrolled__link">
               <i class="fa fa-search"></i>
             </a>
-          </li>
-          <li class="scrolled__item">
-            <a href="#" class="scrolled__link">
-              <i class="fa fa-balance-scale"></i>
-            </a>
+            <div class="scrolled__search-drop">
+              <form action="#" class="scrolled__search-form">
+                <div class="search__inner">
+                  <input class="search__input" type="text" placeholder="Поиск">
+                  <button class="search__btn">
+                    <i class="fa fa-search"></i>
+                  </button>
+                </div>
+              </form>
+            </div>
           </li>
           <li class="scrolled__item">
             <a href="#" class="scrolled__link">
@@ -342,10 +336,6 @@
             </a>
           </li>
         </ul>
-        <div class="login login--scrolled">
-          <a href="#" class="login__link">Войти</a>
-          <a href="#" class="login__link">Зарегистрироваться</a>
-        </div>
       </div>
     </div>
     <div class="container">
