--- a/product.html
+++ b/product.html
@@ -69,7 +69,7 @@
               </div>
               <div class="header__content-col">
                 <div class="calendar">
-                  <a href="#" class="calendar">
+                  <a href="#" class="calendar__link">
                     <span class="header__icon"><i class="fa fa-calendar-check-o"></i></span>
                     <span class="calendar__text">ПН-ПТ 09:00-18:00</span>
                   </a>
@@ -371,13 +371,13 @@
                   робуста.
                   Крепкий напиток с мягким вкусом.</p>
               </div>
-              <div class="catalog__count">
+              
+              <div class="catalog__count catalog__count--product">
                 <div class="catalog__count-row">
+                  <div class="catalog__price">1257 руб.</div>
                   <button class="catalog__control catalog__minus">-</button>
                   <input value="1" class="catalog__count-num">
                   <button class="catalog__control catalog__plus">+</button>
-                  <a href="#" class="catalog__control-link"><span class="header__icon"><i
-                        class="fa fa-balance-scale"></i></span></a>
                 </div>
                 <button class="catalog__count-btn">Купить</button>
                 <button class="catalog__count-btn catalog__count-btn--small">Купить в 1 клик</button>
@@ -511,67 +511,57 @@
         <div class="recommend">
           <div class="recommend__top">Персональные рекомендации:</div>
           <ul class="recommend__list">
-            <li class="recommend__item">
-              <div class="recommend__img">
-                <a href="#" class="recommend__link">
+              <li class="recommend__item">
+                <div class="recommend__img">
                   <img src="./img/catalog/recomend.jpg" alt class="recommend__img-pic">
-                </a>
-              </div>
-              <a href="#" class="recommend__group">Ирландский крем</a>
-              <a href="#" class="recommend__name">Марагоджил</a>
-              <span class="recommend__price">500 руб.</span>
-              <button class="recommend__btn">Купить</button>
-              <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
-            </li>
-            <li class="recommend__item">
-              <div class="recommend__img">
-                <a href="#" class="recommend__link">
+                </div>
+                <a href="#" class="recommend__group">Ирландский крем</a>
+                <a href="#" class="recommend__name">Марагоджил</a>
+                <span class="recommend__price">500 руб.</span>
+                <a href="#" class="recommend__btn">Купить</a>
+                <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
+              </li>
+             <li class="recommend__item">
+                <div class="recommend__img">
                   <img src="./img/catalog/recomend.jpg" alt class="recommend__img-pic">
-                </a>
-              </div>
-              <a href="#" class="recommend__group">Ирландский крем</a>
-              <a href="#" class="recommend__name">Марагоджил</a>
-              <span class="recommend__price">500 руб.</span>
-              <button class="recommend__btn">Купить</button>
-              <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
-            </li>
-            <li class="recommend__item">
-              <div class="recommend__img">
-                <a href="#" class="recommend__link">
+                </div>
+                <a href="#" class="recommend__group">Ирландский крем</a>
+                <a href="#" class="recommend__name">Марагоджил</a>
+                <span class="recommend__price">500 руб.</span>
+                <a href="#" class="recommend__btn">Купить</a>
+                <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
+              </li>
+             <li class="recommend__item">
+                <div class="recommend__img">
                   <img src="./img/catalog/recomend.jpg" alt class="recommend__img-pic">
-                </a>
-              </div>
-              <a href="#" class="recommend__group">Ирландский крем</a>
-              <a href="#" class="recommend__name">Марагоджил</a>
-              <span class="recommend__price">500 руб.</span>
-              <button class="recommend__btn">Купить</button>
-              <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
-            </li>
-            <li class="recommend__item">
-              <div class="recommend__img">
-                <a href="#" class="recommend__link">
+                </div>
+                <a href="#" class="recommend__group">Ирландский крем</a>
+                <a href="#" class="recommend__name">Марагоджил</a>
+                <span class="recommend__price">500 руб.</span>
+                <a href="#" class="recommend__btn">Купить</a>
+                <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
+              </li>
+              <li class="recommend__item">
+                <div class="recommend__img">
                   <img src="./img/catalog/recomend.jpg" alt class="recommend__img-pic">
-                </a>
-              </div>
-              <a href="#" class="recommend__group">Ирландский крем</a>
-              <a href="#" class="recommend__name">Марагоджил</a>
-              <span class="recommend__price">500 руб.</span>
-              <button class="recommend__btn">Купить</button>
-              <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
-            </li>
-            <li class="recommend__item">
-              <div class="recommend__img">
-                <a href="#" class="recommend__link">
+                </div>
+                <a href="#" class="recommend__group">Ирландский крем</a>
+                <a href="#" class="recommend__name">Марагоджил</a>
+                <span class="recommend__price">500 руб.</span>
+                <a href="#" class="recommend__btn">Купить</a>
+                <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
+              </li>
+             <li class="recommend__item">
+                <div class="recommend__img">
                   <img src="./img/catalog/recomend.jpg" alt class="recommend__img-pic">
-                </a>
-              </div>
-              <a href="#" class="recommend__group">Ирландский крем</a>
-              <a href="#" class="recommend__name">Марагоджил</a>
-              <span class="recommend__price">500 руб.</span>
-              <button class="recommend__btn">Купить</button>
-              <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
-            </li>
-          </ul>
+                </div>
+                <a href="#" class="recommend__group">Ирландский крем</a>
+                <a href="#" class="recommend__name">Марагоджил</a>
+                <span class="recommend__price">500 руб.</span>
+                <a href="#" class="recommend__btn">Купить</a>
+                <div class="recommend__type">Вид кофе <span class="recomend__type-inner">Купажи</span></div>
+              </li>
+            </ul>
         </div>
       </main>
     </div>
