--- a/dostavka-i-oplata.html
+++ b/dostavka-i-oplata.html
@@ -69,7 +69,7 @@
               </div>
               <div class="header__content-col">
                 <div class="calendar">
-                  <a href="#" class="calendar">
+                  <a href="#" class="calendar__link">
                     <span class="header__icon"><i class="fa fa-calendar-check-o"></i></span>
                     <span class="calendar__text">ПН-ПТ 09:00-18:00</span>
                   </a>
