--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="header__content-col">
               <div class="calendar">
-                <a href="#" class="calendar">
+                <a href="#" class="calendar__link">
                   <span class="header__icon"><i class="fa fa-calendar-check-o"></i></span>
                   <span class="calendar__text">ПН-ПТ 09:00-18:00</span>
                 </a>
@@ -356,7 +356,7 @@
         </div>
       </div>
       <div class="container">
-        <main class="content">
+        <main class="content content--main-page">
           <div class="content__lines"></div>
           <section class="content__block">
             <div class="section-title">
