--- a/catalog.html
+++ b/catalog.html
@@ -488,7 +488,7 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-1" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
                             <input type="radio" name="radio-1" class="choise__input">
@@ -533,16 +533,16 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-2" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-2" class="choise__input">
                           </label>
                           <label  class="choise__label" >500гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-2" class="choise__input">
                           </label>
                           <label  class="choise__label" >1000гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-2" class="choise__input">
                           </label>
                         </fieldset>
                       </div>
@@ -610,16 +610,16 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-3" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-3" class="choise__input">
                           </label>
                           <label  class="choise__label" >500гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-3" class="choise__input">
                           </label>
                           <label  class="choise__label" >1000гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-3" class="choise__input">
                           </label>
                         </fieldset>
                       </div>
@@ -656,16 +656,16 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-4" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-4" class="choise__input">
                           </label>
                           <label  class="choise__label" >500гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-4" class="choise__input">
                           </label>
                           <label  class="choise__label" >1000гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-4" class="choise__input">
                           </label>
                         </fieldset>
                       </div>
@@ -726,16 +726,16 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-5" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-5" class="choise__input">
                           </label>
                           <label  class="choise__label" >500гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-5" class="choise__input">
                           </label>
                           <label  class="choise__label" >1000гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-5" class="choise__input">
                           </label>
                         </fieldset>
                       </div>
@@ -778,16 +778,16 @@
                       <div class="choise__row">
                         <fieldset class="choise__field">
                           <label  class="choise__label" >100гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-6" class="choise__input" checked>
                           </label>                       
                           <label  class="choise__label" >200гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-6" class="choise__input">
                           </label>
                           <label  class="choise__label" >500гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-6" class="choise__input">
                           </label>
                           <label  class="choise__label" >1000гр.
-                            <input type="radio" name="radio-1" class="choise__input">
+                            <input type="radio" name="radio-6" class="choise__input">
                           </label>
                         </fieldset>
                       </div>
