--- a/product.html
+++ b/product.html
@@ -347,7 +347,7 @@
 								</div>
 							</li>
 							<li class="recommend__item">
-								<div class="recommend__img"><img class="recommend__img-pic" src="../img/catalog/catalog_5.png" alt=""></div><a class="recommend__group" href="#">Забаглионе</a>
+								<div class="recommend__img"><img class="recommend__img-pic" src="./img/catalog/catalog_5.png" alt=""></div><a class="recommend__group" href="#">Забаглионе</a>
 								<div class="recomend__count">
 									<div class="product-count">
 										<div class="product-count__row">
