--- a/index.html
+++ b/index.html
@@ -383,6 +383,12 @@
 							<li class="footer__nav-item"><a class="footer__nav-link" href="./spetspredlozheniya.html">Спецпредложения</a></li>
 						</ul>
 					</div>
+					<div class="modal">
+						<div class="modal__inner">
+							<button class="modal__close"></button>
+							<h3 class="modal__title">Товар успешно добавлен в корзину</h3>
+						</div>
+					</div>
 					<div class="footer__content">
 						<ul class="goods footer__goods">
 							<li class="goods__item"><a class="goods__link" href="#">Кофе      </a></li>
