--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											</ul>
 										</div>
 									</li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/tea-icon.png" alt=""><span class="goods__text">Чай</span></a>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/tea-icon.png" alt=""><span class="goods__text">Чай</span></a>
 										<div class="goods__drop">
 											<ul class="goods__drop-list">
 												<li class="goods__drop-item"><a class="goods__drop-link" href="#">Ароматизированный зеленый чай</a></li>
@@ -87,11 +87,11 @@
 											</ul>
 										</div>
 									</li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/dishes.png" alt=""><span class="goods__text">Посуда</span></a></li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/sweet-icon.png" alt=""><span class="goods__text">Сладости</span></a></li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/syrup-icon.png" alt=""><span class="goods__text">Сиропы</span></a></li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/gifts.png" alt=""><span class="goods__text">Царские подарки</span></a></li>
-									<li class="goods__item"><a class="goods__link" href="#"><img class="goods__img" src="./img/header/other.png" alt=""><span class="goods__text">Прочее</span></a></li>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/dishes.png" alt=""><span class="goods__text">Посуда</span></a></li>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/sweet-icon.png" alt=""><span class="goods__text">Сладости</span></a></li>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/syrup-icon.png" alt=""><span class="goods__text">Сиропы</span></a></li>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/gifts.png" alt=""><span class="goods__text">Царские подарки</span></a></li>
+									<li class="goods__item"><a class="goods__link" href="./catalog.html"><img class="goods__img" src="./img/header/other.png" alt=""><span class="goods__text">Прочее</span></a></li>
 								</ul>
 							</div>
 						</div>
